POST&PUT /spots - save coords in geolocation service
